--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite
+  adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
